Minor Fixes - milestone overflow wrap - menu overlay z-index

--- a/src/routes/layout.scss
+++ b/src/routes/layout.scss
@@ -102,6 +102,7 @@ svg {
 
 .menu {
 	position: relative;
+	z-index: 1000;
 
 	.menu-items {
 		position: absolute;
